# sql-check

./: Cargo.toml  README.md  TESTING.md
.github/: FUNDING.yml
.github/actions/verify-crate-availability/: action.yml
.github/workflows/: codeql.yml  release.yml  test.yml
sql-check/: Cargo.toml
sql-check/examples/: feature_flags.rs  mysql.rs  postgres.rs  sqlite.rs
sql-check/src/: lib.rs
sql-check/tests/: compile_fail_mysql.rs  compile_fail_postgres.rs  compile_fail_sqlite.rs  feature_flags.rs
sql-check/tests/compile_fail/mysql/: invalid_sql_syntax.rs  invalid_sql_syntax.stderr  nonexistent_table.stderr
sql-check/tests/compile_fail/postgres/: invalid_sql_syntax.stderr  nonexistent_table.stderr
sql-check/tests/compile_fail/sqlite/: invalid_sql_syntax.stderr  nonexistent_table.rs  nonexistent_table.stderr
sql-check_derive/: Cargo.toml
sql-check_derive/src/: lib.rs  runtime.rs
sql-check_derive/src/database/: impls.rs  mod.rs
